# parex

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  LICENSE  PAREX_DESIGN.md  README.md
src/: builder.rs  engine.rs  entry.rs  error.rs  lib.rs  results.rs  traits.rs
tests/: integration_test.rs
