[package]
name = "parex"
version = "0.3.1"
edition = "2024"
description = "Blazing-fast parallel search engine — generic, embeddable, zero opinions"
license = "MIT"
repository = "https://github.com/dylanisaiahp/parex"
keywords = ["search", "parallel", "filesystem", "files"]
categories = ["filesystem", "concurrency"]

[dependencies]
thiserror = "2"

[dev-dependencies]
tempfile = "3"
walkdir = "2"
